--- a/backfill/setup.cfg
+++ b/backfill/setup.cfg
@@ -12,6 +12,9 @@ install_requires =
     pymongo[srv] == 4.0.2
     arrow == 1.2.2
 
+[options.packages.find]
+where=src
+
 [options.entry_points]
 console_scripts =
     gmloader = gmloader.cli:main
